recursion.logo.koch.SquareKoch.scala.error
Erreur de compilation :
SquareKoch:24: error: not found: value snowSide
    snowSide(levels-1,length*n)
    ^