recursion.logo.koch.SquareKoch.scala.code
def snowSquare (levels:Int, length:Double) {
    squareSide(levels, length);
    right(90);
    setColor(Color.blue);
    squareSide(levels, length);
    right(90);
    setColor(Color.orange);
    squareSide(levels, length);
    right(90);
    setColor(Color.magenta);
    squareSide(levels, length);
    right(90);
}
def squareSide(levels:Int, length:Double) {
    if (levels==0) { avance(length) ; }
  else {
    var n=0.33
    squareSide(levels-1,length*n)
    gauche(90)
    squareSide(levels-1,length*n)
    right(90)
    squareSide(levels-1,length*n)
    gauche(90)
    snowSide(levels-1,length*n)
    
  }
}